# QA_Assistant

./: README.md  config.py  llm.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  rag.py
chroma_db/: chroma.sqlite3
memory/: __init__.py  store.py  vectorstore.py
tools/: __init__.py  database.py  search.py
